--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "bugs": {
         "url": "https://github.com/aneacevedo/aneacevedo/issues"
     },
-    "homepage": "https://github.com/aneacevedo/aneacevedo#readme"
+    "homepage": "https://github.com/aneacevedo/aneacevedo#readme",
+    "devDependencies": {
+        "webpack": "^5.10.0"
+    },
+    "dependencies": {
+        "normalize.css": "^8.0.1"
+    }
 }
